# mynesweeper

./: .gitignore  CMakeLists.txt  README.md
cmake/: mynesweeper.desktop.in
include/: application.hpp  defines.hpp  logic.hpp  new_game_dialog.hpp  no_moves_left_dialog.hpp  tile.hpp  window.hpp
minesweeper/: CMakeLists.txt  debug.hpp  main.cpp
minesweeper/logic/: CMakeLists.txt  logic.cpp  logic.hpp  minefield.cpp  minefield.hpp  tile.cpp  tile.hpp
minesweeper/visuals/: CMakeLists.txt  application.cpp  application.hpp  window.cpp  window.hpp
minesweeper/visuals/dialogs/: CMakeLists.txt  new_game_dialog.cpp  new_game_dialog.hpp  no_moves_left_dialog.cpp  no_moves_left_dialog.hpp
minesweeper/visuals/widgets/: CMakeLists.txt  tile.cpp  tile.hpp
sprites/: base.xcf  icon.xcf
src/: application.cpp  logic.cpp  main.cpp  new_game_dialog.cpp  no_moves_left_dialog.cpp  tile.cpp  window.cpp
